[package]
name = "shapiro"
version = "0.2.0"
edition = "2021"

[lib]
name = "shapiro"
path = "src/lib.rs"

[[bin]]
name = "shapiro_bench"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "reasoners"
harness = false

[dependencies]
petgraph = { version = "0.6.2" }
logos = "0.12.1"
ordered-float = "3.0.0"
itertools = "0.10.5"
