[package]
name = "shapiro"
version = "0.8.0"
edition = "2021"

[lib]
name = "shapiro"
path = "src/lib.rs"

[[bin]]
name = "shapiro_bench"
path = "src/bin.rs"

[dev-dependencies]
rand = "0.8.5"

[dependencies]
petgraph = { version = "0.6.2" }
differential-dataflow = "0.12.0"
timely = "0.12.0"
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
logos = "0.12.1"
ordered-float = "3.0.0"
itertools = "0.10.5"
indexmap = "1.9.1"
ahash = "0.8.0"
rayon = "1.5.3"
arrayvec = "0.7.2"
crossbeam-channel = "0.5.6"
im = "15.1.0"
lasso = { git = "https://github.com/Kixiron/lasso.git"}
lazy_static = "1.4.0"
clap = "3.1.1"
phf = { version = "0.11", features = ["macros"] }
colored = "2.0.0"